feat(service-auth): create HRMS roster assignments
